Fixed background on firefox, hiding controls

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Ayuthaya", "Charcoal CY", Monaco, sans-serif;
-  background-color: #1a0a0a;
+  background-color: #692b2b;
   color: #bd9d9d;
 
   -webkit-transition: background-color 33s ease-out;
